# ai_competition_api_sharedoc

./: Dockerfile  Makefile  README.md  http-client.env.json
app/: idx_to_class.json  main.py  pyproject.toml
app/utils/: __init__.py  image.py  model.py  server.py
